--- a/index.html
+++ b/index.html
@@ -1,95 +1,160 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
+
 <head>
-	<title>Navigation Mernu</title>
-	<style>
-		ul{list-style-type:none;
-			margin: 30px;
-			padding: 5px;
-			overflow: hidden;
-			background-color: #333333;
+  <meta charset="utf-8">
+  <title>tindog</title>
 
-		}
-		li{float: left;
-			display: inline;
-		}
-		li a{display: inline-block;
-			color: white;
-			text-align: center;
-			padding: 16px;
-			text-decoration: none;
-		}
-		li a:hover{background-color: #111111;
-			}
-		h1{color: red;
-			font-size: 70px;
 
-		}
-		.info{background-color: tomato;
-			color: white;
-			padding: none;
-		font-size: 18px;
-		display: block;
-		text-align: center;
-		font-size: 50px;
-		color: white;
-		}
-		.p{color: white;
-			font-size: 18px;}
-			.img{float: right;
-				width: 110px;
-				height: 90px;}
-				.video{text-align: center;}
-	</style>
+  <!-- font awesome -->
+
+  <script src="https://kit.fontawesome.com/c49221ce4e.js" crossorigin="anonymous"></script>
+
+
+  <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento|Ubuntu&display=swap" rel="stylesheet">
+
+
+
+
+
+
+  <!-- bootstrap scripts -->
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+  <!-- stylesheet -->
+
+  <link rel="stylesheet" href="css/styles.css">
 </head>
-<body style="background-image: url(background1.jpg)";>
-	<h1 style="text-align: center";>Laptech IT Solution</h1>
-<ul>
-	
-	<li><a href="file:///C:/Users/Muhammad%20Faisal/Desktop/Navigation%20menu.html#News">Home</a></li>
-	<li><a href="#News">News</a>
-	</li>
-	<li><a href="#Contact">Contact</a></li>
-	<li><a href="#About">About</a></li>
-</ul>
-		<h1 class="info">Laptops</h1>
-		<p class="p">
-		<img src="laptop2.png" alt="Laptop Repairing" class="img">
-			laptech.pk is an online shopping deal Discount offer provider where we share unbeatable deals, offers, promo code, coupon discounts and much more when you buy online products on Amazon, eBay, and Walmart, etc. platforms. Our price is very reasonable compared to another shopping site. Get more information visit here: https://www.laptech.pk<br>We Also Offer you Laptops Repairing at your door step. You Consider us your laptop Doctor.<br>We repair Laptops Screens,Hards,Rams,Chargers,Body.
-		</p>
-		<h1 class="info">Mobiles</h1>
-		<p class="p">
-			<img src="mobile1.png" alt="Mobiles" class="img">
-			Mobile phones are the most popular products that are sold online, especially here in Pakistan. Here at PriceOye, we assist you in buying your next mobile smartphone by showing you prices from popular online shopping websites, while highlighting the lowest mobile phone prices in Pakistan. We have mobile phones from QMobile, Huawei, Samsung, LG, Apple, Google Nexus, Motorola, and more.
 
-Using PriceOye will ensure your purchase is of the lowest price. We use intelligent software with an easy-to-use interface to find the lowest prices for you - you save both money and time!
+<body>
 
-Mobile phones aren’t the only items we find the lowest price for here at PriceOye. We are continually developing our website to find lowest prices for all consume electronics including gaming consoles, cameras, home appliances, and books! Stay tuned by liking us on Facebook, following us on Twitter, or subscribing to our email newsletter.
-		</p>
-		<h1 class="info">Printers</h1>
-		<p class="p">
-			<img src="printer2.png" alt="Printers" class="img">
-			Want to save your precious moments, saved as soft copies, to beautiful hard copies (printing papers or card)? Don't know how to save a hard copy of your important documents on your PC? Worry not, because you can do all that and even more with top-quality printers online in Pakistan. Printers allow you to reproduce soft copies to hard copies while scanners do the exact opposite. Having these devices in your home or at your office can save you a lot of time, efforts and, most importantly, money.
 
-Buy Printers @ Optimal Prices in Pakistan from Laptech.pk
-Daraz's printer online shopping store in Pakistan is considered to be the best when it comes to getting a 3-in-1 printer on best rates in Pakistan. Get the quality branded printers at the lowest price in Pakistan from Daraz's Pakistan website. The minimum price for printers on Daraz.pk starts at Rs.4,900 but you can buy the printers at an, even more, cheaper price in Pakistan during Daraz's Campaigns that offers up to 50% discount! So, trust Daraz.pk's printer online store for the best printer prices in Pakistan.
 
-All Types of Printers Available @ Daraz.pk
-At Laptech.pk, you can buy printers and you can also buy scanners conveniently from the comfort of your home, and at the best possible prices. Whether you need a printer to print your documents, manuscripts or images, or a scanner to scan your notes, photos, etc., you can have it safely delivered to your home whenever you like. From heavy duty enterprise printers to compact laser, Deskjet or inkjet printers, you can find it all here at Daraz.pk. To maintain excellence in our offerings, we offer best printers and scanners, and even 3-in-1 machines (printer, scanner, and photocopier) from major brands including HP, Samsung, Fuji Film, Canon, Epson, and more. So, find the one that fits your printing and scanning needs, and order now! Pay Cash on Delivery if you like!
-</p>
-<h1 class="info">Scaners</h1>
-<p class="p">
-	We Also Deals in Scaners. We have a lot of quantity of This product as much as you need.
-</p>
-<video width="320" height="240" controls class="video">
-	<source src="ideapad900.mp4" type="video/mp4">
-		
-</video>
-<object data="mobile1.png"></object>
-<iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=PKRB6umzeAg">
-</iframe>
+
+  <section id="title">
+    <div class="container-fluid">
+
+
+
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="#">tindog</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+
+
+          <ul class="navbar-nav ml-auto">
+
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Download</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="row">
+        <div class="col-lg-6">
+          <h1>Meet new and interesting dogs nearby.</h1>
+          <button type="button" name="button" class="icon btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
+          <button type="button" name="button" class="icon btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
+        </div>
+        <div class="col-lg-6">
+          <img class="title-image" src="images/iphone6.png" alt="tindog-image">
+        </div>
+
+      </div>
+
+    </div>
+  </section>
+  <section id="middle">
+    <div class="row">
+      <div class="col-lg-4">
+        <i class="fas fa-check-circle fa-4x fac"></i>
+        <h1>Easy to use</h1>
+        <p>So easy to use, Even your dog could do it</p>
+      </div>
+      <div class="col-lg-4">
+        <i class="fas fa-circle-notch fa-4x fac"></i>
+        <h1>Elite Clientele</h1>
+        <p>We have all the dogs, the greatest dogs</p>
+      </div>
+      <div class="col-lg-4">
+        <i class="fas fa-heart fa-4x fac"></i>
+        <h1>Guaranteed to work.</h1>
+        <p>Find the love of your dog's life or your money back.</p>
+      </div>
+
+    </div>
+
+
+
+
+  </section>
+  <section id="test">
+    <div id="carouselExampleFade" class="carousel slide" data-ride="carousel" data-interval="1000">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <h1>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog Woof.</h1>
+      <img class="dog-img" src="images/dog.jpg" alt="Dog-img">
+      <span>Pebbles New York</span><br><br><br><br>
+
+    </div>
+    <div class="carousel-item carousel-section">
+      <h1>This is the carousel section</h1>
+    </div>
+
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+  </section>
+  <section id="logo-img">
+    <div class=" images-section">
+      <img class="test-imgs" src="images/TechCrunch.png" alt="Techcrunch">
+      <img class="test-imgs" src="images/tnw.png" alt="Tnw-img">
+      <img class="test-imgs" src="images/bizinsider.png" alt="bizinsider-img">
+      <img class="test-imgs" src="images/mashable.png" alt="mashable-img">
+    </div>
+  </section>
+  <section id="bottom-section">
+<h1>Find the true love of yourDog's Life Today</h1>
+<button type="button" name="button" class="btn btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
+<button type="button" name="button" class="btn btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
+  </section>
+  <section id="footer-section">
+    <a href=""><i class="fab fa-twitter fa-2x footer-icon"></i></a>
+    <a href=""><i class="fab fa-facebook-f fa-2x footer-icon"></i></a>
+    <a href=""><i class="fab fa-instagram fa-2x footer-icon"></i></a>
+    <p>@Copyright 2008 tindog</p>
+
+  </section>
+
+
+
+
+
 
 
 </body>
+
 </html>
