--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <!-- stylesheet -->
 
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
